# gpu-faker

./: .gitignore  README.md  angular.json  app-icon.png~  package-lock.json  package.json
src/: index.html  styles.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/error-modal/: error-modal.component.html  error-modal.component.ts
src/app/home/: home.component.html  home.component.ts
